MOL-970: Add headless integration for subscriptions
